--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,7 +1,9 @@
 - @posts.each do |post|
+	%h2= link_to post.title, post
 	%p
-		= link_to post.title, post
-		= post.created_at.to_s(:long)
+		Published at 
+		= time_ago_in_words(post.created_at)
+		ago
 
 
 %p= link_to "New Post", new_post_path
