--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -4,6 +4,7 @@
 		Published at 
 		= time_ago_in_words(post.created_at)
 		ago
-
+		By
+		= post.user.email
 
 %p= link_to "New Post", new_post_path
