--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,9 +12,18 @@
 	%header.main_header.clearfix
 		.wrapper
 			#logo
-				%p Sika's Rails Forum
+				%p= link_to "Sika's Rails Forum", root_path
+
 			#buttons
-				%p= link_to "New Post", new_post_path
+				- if user_signed_in?
+					%p
+						= link_to "New Post", new_post_path
+						= link_to "Sign out", destroy_user_session_path, method: :delete
+				- else
+					%p
+						= link_to "Sign up", new_user_registration_path
+						= link_to "Sign in", new_user_session_path
+
 	.wrapper
 		%p.notice= notice
 		%p.alert= alert
