--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -3,7 +3,8 @@
 	%p= @post.content
 
 
-
+- if user_signed_in?
 	= link_to "Edit", edit_post_path(@post)
 	= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to do this?" }
-	= link_to "Home", root_path
+
+= link_to "Home", root_path
