--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,10 +1,12 @@
-.comment
-	%p= comment.comment
-	%p 
-		By
-		- if !comment.user 
-			Anonymous
-		- else	
-			= comment.user.email
-	= link_to "Edit", edit_post_comment_path(comment.post, comment)
-	= link_to "Delete", [comment.post, comment], method: :delete, data: { confirm: "Are you sure?" }
+.comment.clearfix
+	.content
+		%p.comment_content= comment.comment
+		%p.comment_author 
+			By
+			- if !comment.user 
+				Anonymous
+			- else	
+				= comment.user.email
+	.buttons
+		= link_to "Edit", edit_post_comment_path(comment.post, comment)
+		= link_to "Delete", [comment.post, comment], method: :delete, data: { confirm: "Are you sure?" }
