--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -3,14 +3,16 @@
 	%p= @post.content
 
 	#comments
-		%h2= @post.comments.count
+		%h2= pluralize(@post.comments.count, "comment")
 		= render @post.comments
 
 		%h3 Reply to thread
 		= render 'comments/form'
 
-- if user_signed_in?
-	= link_to "Edit", edit_post_path(@post)
-	= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to do this?" }
+%br/
+%hr/
+%br/
 
-= link_to "Home", root_path
+- if user_signed_in?
+	= link_to "Edit", edit_post_path(@post), class: "button"
+	= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to do this?" }, class: "button"
